--- a/pagina.css
+++ b/pagina.css
@@ -95,7 +95,7 @@
 
  .leaderboard-container button{
     margin-top: 1vh;
-    width: 100%;
+    width: 50%;
     height: 50px;
     border: none;
     border-radius: 5px;
@@ -108,15 +108,35 @@
  }
 
 
+
+
 /* telefono */
 
  @media screen and (max-width: 430px) {
     
-    
+    .leaderboard-container h2{
+        text-align: center;
+    }
 
+    .leaderboard-container h3{
+        text-align: center;
+        margin-bottom: 1vh;
+    }
 
+    .leaderboard-container button{
+        width: 100%;
+        font-size: 16px;
+    }
 
+    .contenitore-globale .contenitore-colori .colore-random{
+        width: 30%;
+        height: 40%;
+    }
 
+    .contenitore-globale .contenitore-colori-bottom .colore-random{
+        width: 30%;
+        height: 40%;
+    }
 
 
 
